--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,7 +33,7 @@ html
                     li
                         a(href='/help') Help
                     li.dropdown
-                        a(href='#').dropdown-toggle(data-toggle='dropdown', role='button', aria-expanded='false') About 
+                        a(href='#', data-toggle='dropdown', role='button', aria-expanded='false').dropdown-toggle About 
                             span.caret
                         ul.dropdown-menu(role='menu')
                             li
