--- a/views/404.jade
+++ b/views/404.jade
@@ -6,4 +6,4 @@ block content
         .row
             .col-lg-10.col-lg-offset-1.text-center
                 h1 404
-                p Oops! Looks like we couldn't find that page. Try starting a new search to explore tag suggestions and statistics.
+                p Oops! Looks like we couldn't find that page. Check your URL for errors or try starting a new search to explore tag suggestions and statistics.
