Change results.js to handle empty listings object in Etsy results

--- a/views/dashboard-listings.jade
+++ b/views/dashboard-listings.jade
@@ -16,7 +16,7 @@ div
                     each item in results.listings
                         .row.listing
                             .col-lg-3
-                                img(src='#{item.MainImage.url_170x135}').img-responsive
+                                img(src='#{item.image_url}').img-responsive
                             .col-lg-9
                                 .row
                                     .col-lg-12
