--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ Base styling
 */
 
 body {
-    background-color: #f3f3f3;
+    background-color: #f2f2f2;
     font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
 }
 
@@ -19,7 +19,7 @@ a {
 }
 
 .navbar {
-    background-color: #fcfcfc;
+    background-color: #fefefe;
     box-shadow: 0 1px 3px rgba(0,0,0,.06);
     height: 60px;
     margin-bottom: 0;
@@ -40,21 +40,30 @@ a {
 
 .navbar-default .navbar-nav>li>a {
     color: #595959;
+    font-size: 13px;
     text-transform: uppercase;
 }
 
 .navbar .search input {
     border-radius: 30px;
     margin-top: 1px;
-    min-width: 230px;
+    min-width: 250px;
 }
 
 .navbar .search .btn {
     background-color: transparent;
-    color: #767676;
+    color: #484848;
     font-size: 16px;
     margin: 2px 0 0 7px;
     padding: 0;
+}
+
+#footer {
+    background-color: #fcfcfc;
+    border-top: 1px solid #e9e9e9;
+    color: #595959;
+    padding-bottom: 30px;
+    padding-top: 30px;
 }
 
 
@@ -138,6 +147,7 @@ Dashboard view
 .tab-pane {
     background-color: #fff;
     border-radius: 3px;
+    margin-bottom: 120px;
 }
 
 /* Dashboard panel with results content */
@@ -145,6 +155,10 @@ Dashboard view
     border: 0;
     box-shadow: 0 1px 1px rgba(0,0,0,0.07);
     margin: 0;
+}
+
+.panel>.panel-body {
+    padding-bottom: 0;
 }
 
 .panel-default>.panel-heading {
@@ -228,6 +242,7 @@ Dashboard view
 
 /* Tag suggestion list in left column */
 .list-tags {
+    margin-bottom: 60px;
     margin-top: 30px;
 }
 
@@ -289,6 +304,7 @@ Dashboard view
 
 .info-page {
     margin-top: 70px;
+    min-height: 600px;
 }
 
 .info-page p {
@@ -311,4 +327,25 @@ Dashboard view
     right: 40px;
     display: none;
     z-index: 999999;
+}
+
+.error-page {
+    background-color: #66b5d7;
+    color: #fff;
+}
+.error-page h1 {
+    font-size: 180px;
+    font-weight: 300;
+    margin-top: 120px;
+}
+
+.error-page p {
+    font-size: 16px;
+    margin-bottom: 200px;
+}
+
+.no-result h3 {
+    font-weight: 300;
+    margin-bottom: 250px;
+    margin-top: 100px;
 }
