Tweak styling & wording on 404 & contact views

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -7,9 +7,7 @@ block content
             .col-lg-10.col-lg-offset-1
                 h1 Contact
     
-                p Questions? Comments? Suggestions? 
-
-                p I love getting feedback and ideas - your input is essential to crafting a tool tailored to the needs of the seller community.
+                p Questions? Comments? Suggestions? Your feedback helps craft a tool tailored to the needs of the seller community.
 
                 p You can send your messages to laura@uptownhoundboutique.com, or convo me through my Etsy shop 
                     a(href='https://www.etsy.com/shop/UptownHoundBoutique', target='_blank') UptownHoundBoutique.
