--- a/public/css/style.css
+++ b/public/css/style.css
@@ -340,7 +340,8 @@ Dashboard view
 }
 
 .error-page p {
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 300;
     margin-bottom: 200px;
 }
 
