Add method to Results object to stringify listing total

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -10,7 +10,7 @@ block content
                         span.center-block.stat-label Your search term
                 .col-lg-2
                     .stat-block.blue.text-center
-                        span.center-block !{results.total}
+                        span.center-block !{results.stringify_total()}
                         span.center-block.stat-label.muted Total listings
                 .col-lg-2
                     .stat-block.dark-blue.text-center
