Add meta tags & dynamic page title

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,13 @@ doctype html
 html
 
   head
-    title= title
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='keywords', content='Etsy,seller,statistics,sales,SEO,relevancy,listings,metrics,sales tool')
+    meta(name='description', content='A tool for Etsy sellers to generate useful statistics and tag suggestions to improve listings and increase sales.')
+
+    title= (title || '') + 'Etsy Seller Metrics' 
 
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/style.css')
