--- a/views/404.jade
+++ b/views/404.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-    .container-fluid.error-page
+    .container-fluid.blue-page
         .row
             .col-lg-8.col-lg-offset-2.text-center
                 h1 404
