--- a/views/error.jade
+++ b/views/error.jade
@@ -2,8 +2,9 @@ extends layout
 
 block content
 
-    .container-fluid.error-page
+    .container-fluid.blue-page
         .row
             .col-lg-8.col-lg-offset-2.text-center
                 h1 Oops!
                 p So sorry! Something went wrong on our end. An error report's been sent and we'll check it out ASAP.
+                p !{message}
