--- a/views/index.jade
+++ b/views/index.jade
@@ -1,20 +1,13 @@
 extends layout
 
-block style-custom
-    style.
-        body {
-            background-color: #eb7654;
-            color: #fff
-        }
-
 block content
-    .container
+    .container-fluid.blue-page
         .row
             .col-sm-10.col-sm-offset-1.landing-text.text-center
-                h1 Search by tag.
-                h3 Get stats + tag suggestions based on
-                    br
-                    | the 100 listings with the highest Etsy relevancy scores.
+                h2 Search by tag.
+                h3 Get stats and tag suggestions based on product listings 
+                    br 
+                    | with the highest Etsy relevancy scores.
         .row
             .col-xs-10.col-xs-offset-1.col-sm-8.col-sm-offset-2.text-center
                 form(name='search-form', action='/search', method='GET').form-inline.landing-search
@@ -25,4 +18,5 @@ block content
                             button(type='submit').btn
                                 span.glyphicon.glyphicon-search
         .row
-            .col-lg-12.text-center Search is limited to 20 characters (the max length for Etsy tags)
+            .col-lg-12.text-center 
+                p Search is limited to 20 characters (the max length for Etsy tags)
