--- a/views/404.jade
+++ b/views/404.jade
@@ -4,6 +4,8 @@ block content
 
     .container-fluid.blue-page
         .row
-            .col-lg-8.col-lg-offset-2.text-center
-                h1 404
-                p Oops! Looks like we couldn't find that page. Check your URL for errors or try starting a new search to explore tag suggestions and statistics.
+            .container
+                .row
+                    .col-xs-10.col-xs-offset-1.col-sm-10.col-sm-offset-1.col-md-10.col-md-offset-1.col-lg-8.col-lg-offset-2.text-center
+                        h1 404
+                        h3 Oops! Looks like we couldn't find that page. Check your URL for errors or try starting a new search to explore tag suggestions and statistics.
