--- a/views/contact.jade
+++ b/views/contact.jade
@@ -4,10 +4,10 @@ block content
 
     .container.info-page
         .row
-            .col-lg-10.col-lg-offset-1
+            .col-xs-12.col-xs-offset-0.col-sm-12.col-sm-offset-0.col-md-12.col-md-offset-0.col-lg-10.col-lg-offset-1
                 h1 Contact
     
-                p Questions? Comments? Suggestions? Your feedback helps craft a tool tailored to the needs of the seller community.
+                p Questions? Comments? Suggestions?
 
                 p You can send your messages to laura@uptownhoundboutique.com, or convo me through my Etsy shop 
                     a(href='https://www.etsy.com/shop/UptownHoundBoutique', target='_blank') UptownHoundBoutique.
