--- a/views/help.jade
+++ b/views/help.jade
@@ -4,7 +4,7 @@ block content
 
     .container.info-page
         .row
-            .col-lg-10.col-lg-offset-1
+            .col-xs-12.col-xs-offset-0.col-sm-12.col-sm-offset-0.col-md-12.col-md-offset-0.col-lg-10.col-lg-offset-1
                 h1 How does this work?
     
                 p This tool uses the Etsy API to search for listings using a particular tag and return the products that Etsy has rated most relevant. The statistics and tag suggestions are generated from the 100 most relevant listings (or less, if fewer than 100 products use that tag). The results are limited to 100 because it is a large enough sample to generate useful data, and this tool is primarily concerned with the strategies employed in the most successful listings (i.e. most relevant) versus every single listing that uses a certain tag.
