--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html
     .navbar.navbar-default
         .container
             .navbar-header
-                button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='nav-collapsed-content')
+                button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#nav-collapsed-content')
                     span.sr-only Toggle navigation
                     span.icon-bar
                     span.icon-bar
@@ -54,10 +54,10 @@ html
         .row
             .container
                 .row
-                    .col-lg-12.text-center &copy; Copyright 2014 Etsy Seller Metrics
+                    .col-xs-12.col-sm-12.col-md-12.col-lg-12.text-center &copy; Copyright 2014 Etsy Seller Metrics
                         br
                         strong Legal Disclaimer:&nbsp;&nbsp;
                         | The term 'Etsy' is a trademark of Etsy, Inc. This application uses the Etsy API but is not endorsed or certified by Etsy, Inc.
 
-    .scroll-top
+    .scroll-top.hidden-xs
         span.glyphicon.glyphicon-circle-arrow-up
