--- a/views/about.jade
+++ b/views/about.jade
@@ -4,7 +4,7 @@ block content
 
     .container.info-page
         .row
-            .col-lg-10.col-lg-offset-1
+            .col-xs-12.col-xs-offset-0.col-sm-12.col-sm-offset-0.col-md-12.col-md-offset-0.col-lg-10.col-lg-offset-1
                 h1 About
     
                 p I'm an Etsy seller and web developer who decided to broaden my programming skill set and make life a bit easier by building an app for some of the challenges I've encountered while expanding my store. We all know how important SEO and keyword relevancy are for our listings, but coming up with great tags and titles is no easy task.
