--- a/views/dashboard-listings.jade
+++ b/views/dashboard-listings.jade
@@ -1,10 +1,10 @@
 div
     .row
-        .col-lg-12
+        .col-xs-12.col-sm-12.col-md-12.col-lg-12
             .panel.panel-default
                 .panel-heading
                     .row.sort-listings
-                        .col-lg-12
+                        .col-xs-12.col-sm-12.col-md-12.col-lg-12
                             ul.nav.nav-pills
                                 li#sort-daily(role='presentation'): a(href='?sort=daily') Daily views
                                 li#sort-price(role='presentation'): a(href='?sort=price') Price
@@ -15,25 +15,40 @@ div
                 .panel-body
                     each item in results.listings
                         .row.listing
-                            .col-lg-3
+                            .visible-xs.col-xs-12.hidden-sm.hidden-md.hidden-lg
                                 img(src='#{item.image_url}').img-responsive
-                            .col-lg-9
+                            .hidden-xs.col-sm-4.col-md-3.col-lg-3
+                                img(src='#{item.image_url}').img-responsive
+                            .col-xs-12.col-sm-8.col-md-9.col-lg-9
                                 .row
-                                    .col-lg-12
+                                    .col-xs-12.col-sm-12.col-md-12.col-lg-12
                                         a(href='#{item.url}', target='_blank') !{item.title}
                                 .row
-                                    .col-lg-12
+                                    .visible-xs.col-xs-12.hidden-sm.hidden-md.hidden-lg
                                         span.stat-label Creation date:
-                                        span.space-right !{item.creationDate}
+                                        span.product-stat !{item.creationDate}
                                         span.stat-label Price:
-                                        span.space-right $!{item.price}
+                                        span.product-stat $!{item.price}
+                                        span
+                                            br
                                         span.stat-label Views:
-                                        span.space-right !{item.views}
+                                        span.product-stat !{item.views}
                                         span.stat-label Favorites:
-                                        span.space-right !{item.num_favorers}
+                                        span.product-stat !{item.num_favorers}
                                         span.stat-label Avg. daily views:
-                                        span.space-right !{item.viewsDaily}
+                                        span.product-stat !{item.viewsDaily}
+                                    .hidden-xs.col-sm-12.col-md-12.col-lg-12
+                                        span.stat-label Creation date:
+                                        span.product-stat !{item.creationDate}
+                                        span.stat-label Price:
+                                        span.product-stat $!{item.price}
+                                        span.stat-label Views:
+                                        span.product-stat !{item.views}
+                                        span.stat-label Favorites:
+                                        span.product-stat !{item.num_favorers}
+                                        span.stat-label Avg. daily views:
+                                        span.product-stat !{item.viewsDaily}
                                 .row
-                                    .col-lg-12
+                                    .col-xs-12.col-sm-12.col-md-12.col-lg-12
                                         each tag in item.tags
                                             a(href='/search?tag=#{tag}').tag #{tag}
