--- a/views/error.jade
+++ b/views/error.jade
@@ -4,7 +4,8 @@ block content
 
     .container-fluid.blue-page
         .row
-            .col-lg-8.col-lg-offset-2.text-center
-                h1 Oops!
-                p So sorry! Something went wrong on our end. An error report's been sent and we'll check it out ASAP.
-                p !{message}
+            .container
+                .row
+                    .col-xs-10.col-xs-offset-1.col-sm-10.col-sm-offset-1.col-md-12.col-md-offset-0.col-lg-8.col-lg-offset-2.text-center
+                        h1 500
+                        h3 So sorry! Something went wrong on our end. We'll check it out ASAP.
