--- a/views/index.jade
+++ b/views/index.jade
@@ -3,20 +3,20 @@ extends layout
 block content
     .container-fluid.blue-page
         .row
-            .col-sm-10.col-sm-offset-1.landing-text.text-center
-                h2 Search by tag.
-                h3 Get stats and tag suggestions based on product listings 
-                    br 
-                    | with the highest Etsy relevancy scores.
-        .row
-            .col-xs-10.col-xs-offset-1.col-sm-8.col-sm-offset-2.text-center
-                form(name='search-form', action='/search', method='GET').form-inline.landing-search
-                    .input-group
-                        label.sr-only(for='tag')
-                        input(type='text', name='tag', maxlength='20', autofocus='autofocus').form-control
-                        span.input-group-btn
-                            button(type='submit').btn
-                                span.glyphicon.glyphicon-search
-        .row
-            .col-lg-12.text-center 
-                p Search is limited to 20 characters (the max length for Etsy tags)
+            .container
+                .row
+                    .col-xs-10.col-xs-offset-1.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.col-lg-6.col-lg-offset-3.landing-text
+                        h2 Search by tag.
+                        h3 Get stats and tag suggestions based on product listings with the highest Etsy relevancy scores.
+                .row
+                    .col-xs-10.col-xs-offset-1.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.col-lg-6.col-lg-offset-3
+                        form(name='search-form', action='/search', method='GET').form-inline.landing-search
+                            .input-group
+                                label.sr-only(for='tag')
+                                input(type='text', name='tag', maxlength='20', autofocus='autofocus').form-control
+                                span.input-group-btn
+                                    button(type='submit').btn
+                                        span.glyphicon.glyphicon-search
+                .row
+                    .col-xs-10.col-xs-offset-1.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.col-lg-6.col-lg-offset-3
+                        p Search is limited to 20 characters (the max length for Etsy tags)
