--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -10,7 +10,7 @@ block content
                         span.center-block.stat-label Your search term
                 .col-xs-12.col-xs-offset-0.col-sm-4.col-md-3.col-lg-2
                     .stat-block.blue.text-center
-                        span.center-block !{results.stringify_total()}
+                        span.center-block !{results.stringifyTotal()}
                         span.center-block.stat-label.muted Total listings
                 .col-xs-12.col-xs-offset-0.col-sm-4.col-md-2.col-lg-2
                     .stat-block.dark-blue.text-center
