--- a/views/dashboard-listings.jade
+++ b/views/dashboard-listings.jade
@@ -16,9 +16,9 @@ div
                     each item in results.listings
                         .row.listing
                             .visible-xs.col-xs-12.hidden-sm.hidden-md.hidden-lg
-                                img(src='#{item.image_url}').img-responsive
+                                img(src='#{item.imageUrl}').img-responsive
                             .hidden-xs.col-sm-4.col-md-3.col-lg-3
-                                img(src='#{item.image_url}').img-responsive
+                                img(src='#{item.imageUrl}').img-responsive
                             .col-xs-12.col-sm-8.col-md-9.col-lg-9
                                 .row
                                     .col-xs-12.col-sm-12.col-md-12.col-lg-12
