--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,9 @@ html
 
     title= (title || '') + 'Etsy Seller Metrics' 
 
+    link(rel='icon', type='image/png', href='/image/favicon/favicon-32x32.png', size='32x32')
+    link(rel='icon', type='image/png', href='/image/favicon/favicon-16x16.png', size='16x16')
+
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/style.css')
 
