Don't escape searchTerm in dashboard view

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -6,7 +6,7 @@ block content
             .row.stats-row
                 .col-xs-12.col-xs-offset-0.col-sm-12.col-sm-offset-0.col-md-5.col-md-offset-0.col-lg-4.col-lg-offset-1
                     .stat-block.text-right
-                        span.center-block #{results.searchTerm}
+                        span.center-block !{results.searchTerm}
                         span.center-block.stat-label Your search term
                 .col-xs-12.col-xs-offset-0.col-sm-4.col-md-3.col-lg-2
                     .stat-block.blue.text-center
