--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,7 +116,8 @@ Index + error views
     border-radius: 20px !important;
     font-weight: 400;
     height: 38px;
-    min-width: 300px;
+    max-width: 300px;
+    min-width: 260px;
 }
 
 .landing-search .glyphicon {
