--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,8 @@ html
                     span.icon-bar
                     span.icon-bar
                     span.icon-bar
-                a.navbar-brand(href="/") ETSY SELLER METRICS
+                a.navbar-brand(href="/") SELLER METRICS 
+                    small FOR ETSY
             .collapse.navbar-collapse#nav-collapsed-content
                 form.navbar-form.navbar-right.search(role='search', name='search-form', action='/search', method='GET')
                     .form-group
