Changed wording for site meta description

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='keywords', content='Etsy,seller,statistics,sales,SEO,relevancy,listings,metrics,sales tool')
-    meta(name='description', content='A tool for Etsy sellers to generate useful statistics and tag suggestions to improve listings and increase sales.')
+    meta(name='description', content='A tag finder and SEO tool for Etsy sellers - explore statistics and tag suggestions from relevant listings to improve your shop's search rankings and increase sales.')
 
     title= (title || '') + 'Etsy Seller Metrics' 
 
