--- a/views/about.jade
+++ b/views/about.jade
@@ -9,7 +9,7 @@ block content
     
                 p I'm an Etsy seller and web developer who decided to broaden my programming skill set and make life a bit easier by building an app for some of the challenges I've encountered while expanding my store. We all know how important SEO and keyword relevancy are for our listings, but coming up with great tags and titles is no easy task.
 
-                p This tool was created to discover new tags and explore what sellers with the most popular products are doing to make their listings so successful. I hope you'll find the tool useful for improving your listings and brainstorming innovatice ideas for your shop!
+                p This tool was created to discover new tags and explore what sellers with the most popular products are doing to make their listings so successful. I hope you'll find the tool useful for improving your listings and brainstorming innovative ideas for your shop!
 
                 p This is only the first version, and I definitely plan to add more features. I want to tailor the tool to the needs of the seller community, so feel free to send feedback and ideas to laura@uptownhoundboutique.com, or convo me through my Etsy shop 
                     a(href='https://www.etsy.com/shop/UptownHoundBoutique', target='_blank') UptownHoundBoutique.
